--- a/.github/workflows/build_and_push.yaml
+++ b/.github/workflows/build_and_push.yaml
@@ -3,16 +3,17 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - "**"
+      - main
+      - dev
     paths:
       - Dockerfile
       - main.py
       - poetry.lock
-      - src/**
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
+    needs: [lint-and-format, python-tests]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
