--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,7 +1,10 @@
 name: Deploy to Kubernetes
 
 on:
-  push:
+  workflow_run:
+    workflows: ["CI"]
+    types:
+      - completed
     branches:
       - main
       - dev
@@ -9,7 +12,6 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    needs: build-and-push
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
