--- a/.github/workflows/build_and_push.yaml
+++ b/.github/workflows/build_and_push.yaml
@@ -5,15 +5,20 @@ on:
     branches:
       - main
       - dev
-    paths:
-      - Dockerfile
-      - main.py
-      - poetry.lock
 
 jobs:
+  changes: 
+    - uses: dorny/paths-filter@v3
+      id: filter
+      with:
+        filters: |
+          Dockerfile
+          main.py
+          poetry.lock
+
   build-and-push:
     runs-on: ubuntu-latest
-    needs: [lint-and-format, python-tests]
+    needs: changes
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
