💚 Add src/** changes to filter for build and push

--- a/.github/workflows/build_and_push.yaml
+++ b/.github/workflows/build_and_push.yaml
@@ -23,6 +23,7 @@ jobs:
               - 'Dockerfile'
               - 'main.py'
               - 'poetry.lock'
+              - 'src/**'
 
   build-and-push:
     runs-on: ubuntu-latest
