--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,12 +1,31 @@
 name: CI
 
 on:
-  push:
-    branches:
-      - "**"
-
+  workflow_call:
+    outputs:
+      build_required:
+        description: "Whether build files have changed"
+        value: ${{ jobs.detect-changes.outputs.build_files }}
 
 jobs:
+  detect-changes:
+    runs-on: ubuntu-latest
+    outputs:
+      build_files: ${{ steps.filter.outputs.build_files }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Check for changes in build-related files
+        uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            build_files:
+              - 'Dockerfile'
+              - 'main.py'
+              - 'poetry.lock'
+              - 'src/**'
+
   lint-and-format:
     runs-on: ubuntu-latest
     steps:
