💚 Use single workflow for all branches

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,7 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main
-      - dev
+      - "**"
 
 jobs:
   ci:
@@ -12,7 +11,9 @@ jobs:
 
   build:
     needs: ci
-    if: needs.ci.outputs.build_required == 'true'
+    if: |
+      needs.ci.outputs.build_required == 'true' && 
+      (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev')
     uses: ./.github/workflows/build.yml
     with:
       environment: ${{ github.ref == 'refs/heads/main' && 'prod' || 'dev' }}
