--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,26 @@ on:
         type: string
 
 jobs:
+  detect-changes:
+    runs-on: ubuntu-latest
+    outputs:
+      build_files: ${{ steps.filter.outputs.build_files }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Check for changes in build-related files
+        uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            build_files:
+              - 'Dockerfile'
+              - 'main.py'
+              - 'poetry.lock'
+              - 'src/**'
   build-and-push:
+    needs: detect-changes
+    if: needs.detect-changes.outputs.build_files == 'true'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
