--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,11 @@
-name: Deploy to Kubernetes
+name: Deploy
 
 on:
-  workflow_run:
-    workflows: ["CI"]
-    types:
-      - completed
-    branches:
-      - main
-      - dev
+  workflow_call:
+    inputs:
+      environment:
+        required: true
+        type: string
 
 jobs:
   deploy:
@@ -15,12 +13,5 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Set environment
-        run: |
-          if [ "$GITHUB_REF" == "refs/heads/main" ]; then
-            echo "ENV=prev" >> $GITHUB_ENV
-          elif [ "$GITHUB_REF" == "refs/heads/dev" ]; then
-            echo "ENV=dev" >> $GITHUB_ENV
-          fi
-      - name: Deploy Docker image to Kubernetes
-        run: echo "Deploying to $ENV environment in Kubernetes cluster..."
+      - name: Deploy to Kubernetes
+        run: echo "Deploying to ${{ inputs.environment }} environment in Kubernetes cluster..."
