--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,16 +9,30 @@ jobs:
   ci:
     uses: ./.github/workflows/ci.yml
 
+  detect-changes:
+    needs: 
+      - ci
+    if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' }}
+    uses: ./.github/workflows/detect_changes.yaml
+
   build:
     needs: ci
-    if: (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev')
+    if: ${{ needs.detect-changes.outputs.build_files == 'true' || needs.detect-changes.outputs.version != 'latest' }}
     uses: ./.github/workflows/build.yml
     with:
-      environment: ${{ github.ref == 'refs/heads/main' && 'prod' || 'dev' }}
+      version: ${{ needs.detect-changes.outputs.version}}
 
   deploy:
     needs: build
     if: success()
     uses: ./.github/workflows/deploy.yml
     with:
-      environment: ${{ github.ref == 'refs/heads/main' && 'prod' || 'dev' }}
+      version: ${{ needs.detect-changes.outputs.version}}
+
+  release:
+    needs:
+      - detect-changes
+      - build
+      - deploy
+    if: ${{ needs.detect-changes.outputs.version != 'latest' }}
+    uses: ./.github/workflows/release.yaml
