--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ on:
       version:
         required: true
         type: string
+        default: 'latest'
     outputs:
       version:
         description: "Version to be used in the Docker image tag"
