--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,19 +23,19 @@ jobs:
       environment: ${{ github.ref == 'refs/heads/main' && 'prod' || 'dev' }}
       version: ${{ needs.detect-changes.outputs.version }}
 
-  deploy:
-    needs: build
-    if: success()
-    uses: ./.github/workflows/deploy.yml
-    with:
-      version: ${{ needs.build.outputs.version }}
+  # deploy:
+  #   needs: build
+  #   if: success()
+  #   uses: ./.github/workflows/deploy.yml
+  #   with:
+  #     version: ${{ needs.build.outputs.version }}
 
-  release:
-    needs:
-      - detect-changes
-      - build
-      - deploy
-    if: ${{ needs.deploy.outputs.version != 'latest' }}
-    uses: ./.github/workflows/release.yaml
-    with:
-      version: ${{ needs.deploy.outputs.version }}
+  # release:
+  #   needs:
+  #     - detect-changes
+  #     - build
+  #     - deploy
+  #   if: ${{ needs.deploy.outputs.version != 'latest' }}
+  #   uses: ./.github/workflows/release.yaml
+  #   with:
+  #     version: ${{ needs.deploy.outputs.version }}
