--- a/.github/workflows/detect-changes.yaml
+++ b/.github/workflows/detect-changes.yaml
@@ -31,6 +31,23 @@ jobs:
               - 'poetry.lock'
               - 'src/**'
 
+  detect-version-changes:
+    runs-on: ubuntu-latest
+    outputs:
+      version_file_changed: ${{ steps.filter.outputs.version_file_changed }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Check for changes in version file
+        uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          base: ${{ github.ref }}
+          filters: |
+            version_file_changed:
+              - 'build.info'
+
   get-version:
     needs: detect-version-changes
     runs-on: ubuntu-latest
@@ -54,5 +71,3 @@ jobs:
           else
             echo "version=latest" >> $GITHUB_OUTPUT
           fi
-
-      
