--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,12 +30,9 @@ jobs:
     with:
       version: ${{ needs.build.outputs.version }}
 
-  # release:
-  #   needs:
-  #     - detect-changes
-  #     - build
-  #     - deploy
-  #   if: ${{ needs.deploy.outputs.version != 'latest' }}
-  #   uses: ./.github/workflows/release.yaml
-  #   with:
-  #     version: ${{ needs.deploy.outputs.version }}
+  release:
+      needs: deploy
+      if: ${{ needs.deploy.outputs.deploy-prev-success == 'true' }}
+      uses: ./.github/workflows/release.yaml
+      with:
+        version: ${{ needs.deploy.outputs.version }}
