--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,20 +10,8 @@ on:
         type: string
 
 jobs:
-  create-release:
+  echo-version:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Create GitHub Release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ version }}
-          release_name: ${{ version }}
-          draft: false
-          prerelease: false
+      - name: Echo Version
+        run: echo "Releasing version: ${{ inputs.version }}"
