--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Echo Version
-        run: echo "Version: $VERSION"
         env:
           VERSION: ${{ inputs.version }}
+        run: | 
+          echo "Version: $VERSION"
