--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,14 @@ jobs:
       - name: Echo Deployment Version
         run: echo "Deploying version '${{ inputs.version }}' to DEV environment."
 
+      - name: Set Deployment Status
+        id: set-deploy-status
+        run: |
+          echo "deploy_prev_success=false" >> $GITHUB_OUTPUT
+      
+      - name: Echo Deployment Status
+        run: echo "${{ steps.set-deploy-status.outputs.deploy_prev_success }}"
+
   deploy-prev:
     name: 🚢 Deploy ∷ PREV
     if: ${{ github.ref_name == 'main' && inputs.version != 'latest' }}
@@ -34,3 +42,7 @@ jobs:
         id: set-deploy-status
         run: |
           echo "deploy_prev_success=true" >> $GITHUB_OUTPUT
+      
+      - name: Echo Deployment Status
+        run: echo "${{ steps.set-deploy-status.outputs.deploy_prev_success }}"
+    
