--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ on:
       deploy_prev_success:
         description: "Indicates if the deployment to PREV was successful"
         value: ${{ jobs.deploy-prev.outputs.deploy_prev_success }}
-    
+
 jobs:
   deploy-dev:
     name: 🚢 Deploy ∷ DEV
@@ -21,19 +21,13 @@ jobs:
       - name: Echo Deployment Version
         run: echo "Deploying version '${{ inputs.version }}' to DEV environment."
 
-      - name: Set Deployment Status
-        id: set-deploy-status
-        run: |
-          echo "deploy_prev_success=false" >> $GITHUB_OUTPUT
-      
-      - name: Echo Deployment Status
-        run: echo "${{ steps.set-deploy-status.outputs.deploy_prev_success }}"
-
   deploy-prev:
     name: 🚢 Deploy ∷ PREV
     if: ${{ github.ref_name == 'main' && inputs.version != 'latest' }}
     runs-on: ubuntu-latest
     environment: prev
+    outputs:
+      deploy_prev_success: ${{ steps.set-deploy-status.outputs.deploy_prev_success }}
     steps:
       - name: Echo Deployment Version
         run: echo "Deploying version '${{ inputs.version }}' to PREV environment."
@@ -42,7 +36,3 @@ jobs:
         id: set-deploy-status
         run: |
           echo "deploy_prev_success=true" >> $GITHUB_OUTPUT
-      
-      - name: Echo Deployment Status
-        run: echo "${{ steps.set-deploy-status.outputs.deploy_prev_success }}"
-    
